<resources>
    <string name="app_name">Easier Student Life</string>
    <string name="tunggu_apa_lagi_buruan_masuk">Tunggu apa lagi? buruan masuk!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun_yuk_daftar_dulu">Belum punya akun? Yuk daftar dulu!</string>
    <string name="saya_setuju_dengan_syarat_ketentuan_yang_berlaku"><![CDATA[Saya setuju dengan syarat & ketentuan yang berlaku.]]></string>
    <string name="lupa_password">Lupa password?</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ganti_foto">Ganti Foto</string>
    <string name="user_name">User Name</string>
    <string name="jurusan">Jurusan</string>
    <string name="universitas">Universitas</string>
    <string name="analytics">Analytics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="timetable_header_text">
        <item></item>
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>

    <string-array name="spinner_tipe_aktifitas">
        <item></item>
        <item>Aktifitas Matkul</item>
        <item>Aktifitas Lain</item>
    </string-array>
</resources>
