<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/civ_profilePhoto"
                app:civ_border_color="#1f1f1f"
                app:civ_border_width="2dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_avatar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganti_foto"
                android:id="@+id/tv_changePhoto"
                android:layout_below="@id/civ_profilePhoto"
                android:layout_centerHorizontal="true"
                android:textColor="#595959"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/civ_profilePhoto"
                android:layout_marginTop="50dp"
                android:layout_centerInParent="true"
                android:id="@+id/rl_userInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_userName"
                    android:layout_centerHorizontal="true"
                    android:text="@string/user_name"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <View
                    android:id="@+id/divider"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:background="#757575"
                    android:layout_below="@id/tv_userName"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_major"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/tv_userName"
                    android:text="@string/jurusan"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tv_univ"
                    android:layout_below="@id/tv_major"
                    android:text="@string/universitas"
                    android:textSize="20sp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_titleAnalyticSection"
                android:layout_below="@id/rl_userInfo"
                android:layout_marginTop="50dp"
                android:text="@string/analytics"
                android:textSize="24sp"
                android:textColor="@color/grey_800"
                android:textStyle="italic" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rl_card"
                android:layout_below="@id/tv_titleAnalyticSection"
                android:padding="10dp"
                android:layout_centerInParent="true">

                <androidx.cardview.widget.CardView
                    android:id="@+id/taskCard"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="#FFE7B4"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/tv_taskQt"
                        android:text="1"
                        android:textSize="45sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tugas"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginTop="100dp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/subjectsCard"
                    app:cardCornerRadius="20dp"
                    app:cardMaxElevation="4dp"
                    app:cardElevation="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/taskCard"
                    app:cardBackgroundColor="#63CDDA">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/tv_subjectQt"
                        android:text="1"
                        android:textSize="45sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mata Kuliah"
                        android:textSize="22sp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="100dp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/activityCard"
                    app:cardCornerRadius="20dp"
                    app:cardMaxElevation="4dp"
                    app:cardElevation="2dp"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="#EA8685"
                    android:layout_below="@+id/taskCard">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/tv_actityQt"
                        android:text="1"
                        android:textSize="45sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kegiatan"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="100dp"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/sksCard"
                    app:cardCornerRadius="20dp"
                    app:cardMaxElevation="4dp"
                    app:cardElevation="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/activityCard"
                    android:layout_below="@id/subjectsCard"
                    app:cardBackgroundColor="#F3A683">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/tv_sksQt"
                        android:text="1"
                        android:textSize="45sp"
                        android:textStyle="italic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SKS"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="100dp"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</merge>